<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imgview_amiiboShowcase"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="56dp"
        app:layout_constraintBottom_toTopOf="@+id/txtview_amiiboShowcase_characterName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase_PREcharacterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_showcase_preCharacterName"
        app:layout_constraintBottom_toTopOf="@+id/txtview_amiiboShowcase_PREgameSeries"
        app:layout_constraintEnd_toStartOf="@+id/txtview_amiiboShowcase_characterName"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgview_amiiboShowcase" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase_characterName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtview_amiiboShowcase_PREgameSeries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtview_amiiboShowcase_PREcharacterName"
        app:layout_constraintTop_toBottomOf="@+id/imgview_amiiboShowcase" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase_PREgameSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="50dp"
        android:text="@string/fragment_showcase_preCharacterSeries"
        app:layout_constraintBottom_toTopOf="@+id/txtview_amiiboShowcase_PREamiiboSeries"
        app:layout_constraintEnd_toStartOf="@+id/txtview_amiiboShowcase_gameSeries"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview_amiiboShowcase_characterName" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase_gameSeries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtview_amiiboShowcase_amiiboType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtview_amiiboShowcase_PREgameSeries"
        app:layout_constraintTop_toBottomOf="@+id/txtview_amiiboShowcase_characterName" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase_PREamiiboSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/fragment_showcase_preAmiiboSeries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview_amiiboShowcase_PREamiiboType" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase_amiiboSeries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtview_amiiboShowcase_PREAUreleaseDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtview_amiiboShowcase_PREamiiboSeries"
        app:layout_constraintTop_toBottomOf="@+id/txtview_amiiboShowcase_amiiboType" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase_PREreleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fragment_showcase_preReleaseDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtview_amiiboShowcase_PREAUreleaseDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview_amiiboShowcase_PREamiiboSeries"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase_PREAUreleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/fragment_showcase_preReleaseAU"
        app:layout_constraintEnd_toStartOf="@+id/txtview_amiiboShowcase_AUreleaseDate"
        app:layout_constraintStart_toEndOf="@+id/txtview_amiiboShowcase_PREreleaseDate"
        app:layout_constraintTop_toBottomOf="@+id/txtview_amiiboShowcase_PREamiiboSeries" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase_AUreleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtview_amiiboShowcase_PREEUreleaseDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtview_amiiboShowcase_PREAUreleaseDate"
        app:layout_constraintTop_toBottomOf="@+id/txtview_amiiboShowcase_amiiboSeries" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase_PREEUreleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="2dp"
        android:text="@string/fragment_showcase_preReleaseEU"
        app:layout_constraintEnd_toStartOf="@+id/txtview_amiiboShowcase_EUreleaseDate"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview_amiiboShowcase_PREAUreleaseDate" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase_EUreleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtview_amiiboShowcase_JPreleaseDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtview_amiiboShowcase_PREEUreleaseDate"
        app:layout_constraintTop_toBottomOf="@+id/txtview_amiiboShowcase_AUreleaseDate" />

    <TextView
        android:id="@+id/txtview_amiiboShowcasePREJPreleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:text="@string/fragment_showcase_preReleaseJP"
        app:layout_constraintEnd_toStartOf="@+id/txtview_amiiboShowcase_JPreleaseDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview_amiiboShowcase_PREEUreleaseDate" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase_JPreleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtview_amiiboShowcase_NAreleaseDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtview_amiiboShowcasePREJPreleaseDate"
        app:layout_constraintTop_toBottomOf="@+id/txtview_amiiboShowcase_EUreleaseDate" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase.PRENAreleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fragment_showcase_preReleaseNA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtview_amiiboShowcase_NAreleaseDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview_amiiboShowcasePREJPreleaseDate"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase_NAreleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtview_amiiboShowcase.PRENAreleaseDate"
        app:layout_constraintTop_toBottomOf="@+id/txtview_amiiboShowcase_JPreleaseDate" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase_PREamiiboType"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fragment_showcase_preAmiiboType"
        app:layout_constraintEnd_toStartOf="@+id/txtview_amiiboShowcase_amiiboType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview_amiiboShowcase_PREgameSeries" />

    <TextView
        android:id="@+id/txtview_amiiboShowcase_amiiboType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtview_amiiboShowcase_amiiboSeries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtview_amiiboShowcase_PREamiiboType"
        app:layout_constraintTop_toBottomOf="@+id/txtview_amiiboShowcase_gameSeries" />
</android.support.constraint.ConstraintLayout>